Add Excel test data and initial contact CRUD tests